--- a/Client/src/web.config
+++ b/Client/src/web.config
@@ -14,6 +14,11 @@
       </rule>
     </rules>
   </rewrite>
+  <staticContent>
+    <mimeMap fileExtension=".json" mimeType="application/json" />
+    <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
+    <mimeMap fileExtension=".woff2" mimeType="application/font-woff2" />
+  </staticContent>
 </system.webServer>
 
 </configuration>
