--- a/Client/package.json
+++ b/Client/package.json
@@ -27,6 +27,7 @@
     "@angular/router": "~11.1.0",
     "@auth0/angular-jwt": "^5.0.2",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "@types/googlemaps": "^3.43.3",
     "bootstrap": "^4.6.0",
     "google-libphonenumber": "^3.2.16",
     "ngx-bootstrap": "^6.2.0",
